[tool.poetry]
name = "event_bus"
version = "0.1.0"
description = ""
authors = ["yehoyada"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.4.*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
black = "^22.3.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
