[tool.poetry]
name = "event_bus"
version = "0.1.0"
description = ""
authors = ["yehoyada"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.4.*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
black = "^22.3.*"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
test = 'scripts.poetry_scripts:run_all_tests'
run_pytest = 'scripts.poetry_scripts:run_pytest'
run_mypy = 'scripts.poetry_scripts:run_mypy'
run_flake8 = 'scripts.poetry_scripts:run_flake8'
run_black = 'scripts.poetry_scripts:run_black'
all = 'scripts.poetry_scripts:run_all'
